docs: document /list
